--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,17 @@ trigger:
 
 variables:
   imageName: azdevops-cicd-sample
-  azureSubscription: AzureSubscriptionConnection   # Your ARM service‑connection name
+  azureSubscription: AzureSubscriptionConnection
   acrName: nithinkatruacr
   rgName: ci-cd-rg
   sonarOrg: akhil-mano52020
 
 stages:
   - stage: Build
-    displayName: CI: Build, Test & Sonar
+    displayName: 'CI: Build, Test & Sonar'
     jobs:
       - job: Build
-        displayName: Self‑Hosted Build
+        displayName: 'Self-Hosted Build'
         pool:
           name: LocalSelfHostedPool1
           demands:
@@ -25,36 +25,33 @@ stages:
           - checkout: self
             persistCredentials: true
 
-          # install Node.js
           - task: NodeTool@0
             inputs:
               versionSpec: '14.x'
 
           - script: npm install
-            displayName: Install dependencies
+            displayName: 'Install dependencies'
 
           - script: npm run lint
-            displayName: Lint code
+            displayName: 'Lint code'
 
           - script: npm test
-            displayName: Run tests
+            displayName: 'Run tests'
 
-          # === Build & push with Docker@2 ===
           - task: Docker@2
-            displayName: Build & Push to ACR
+            displayName: 'Build & Push to ACR'
             inputs:
-              containerRegistry: $(azureSubscription)    # uses your ACR-enabled service connection
+              containerRegistry: $(azureSubscription)
               repository: $(acrName).azurecr.io/$(imageName)
               command: buildAndPush
               Dockerfile: $(Build.SourcesDirectory)/Dockerfile
               tags: |
                 $(Build.BuildId)
 
-          # === SonarCloud analysis (v3 tasks) ===
           - task: SonarCloudPrepare@3
-            displayName: Prepare SonarCloud analysis
+            displayName: 'Prepare SonarCloud analysis'
             inputs:
-              SonarCloud: 'SonarCloud'            # your SonarCloud connection name
+              SonarCloud: 'SonarCloud'
               organization: '$(sonarOrg)'
               scannerMode: 'CLI'
               configMode: 'manual'
@@ -62,20 +59,20 @@ stages:
               cliProjectName: 'CI-CD Sample'
 
           - task: SonarCloudAnalyze@3
-            displayName: Run SonarCloud analysis
+            displayName: 'Run SonarCloud analysis'
 
           - task: SonarCloudPublish@3
-            displayName: Publish SonarCloud Quality Gate
+            displayName: 'Publish SonarCloud Quality Gate'
 
           - publish: $(Build.ArtifactStagingDirectory)
             artifact: drop
 
   - stage: Deploy
-    displayName: CD: Terraform + WebApp Deploy
+    displayName: 'CD: Terraform + WebApp Deploy'
     dependsOn: Build
     jobs:
       - deployment: Deploy
-        displayName: Terraform + WebApp Deploy
+        displayName: 'Terraform + WebApp Deploy'
         environment: '$(Build.SourceBranchName)'
         pool:
           vmImage: 'ubuntu-latest'
@@ -86,24 +83,24 @@ stages:
                 - checkout: self
 
                 - task: TerraformInstaller@0
-                  displayName: Install Terraform
+                  displayName: 'Install Terraform'
                   inputs:
                     terraformVersion: '1.0.0'
 
                 - task: TerraformTaskV1@0
-                  displayName: Terraform Init
+                  displayName: 'Terraform Init'
                   inputs:
                     provider: 'azurerm'
                     command: 'init'
                     workingDirectory: 'terraform'
                     backendServiceArm: '$(azureSubscription)'
                     backendAzureRmResourceGroupName: '$(rgName)'
-                    backendAzureRmStorageAccountName: '$(acrName)'       # reuse acrName for state storage if applicable
+                    backendAzureRmStorageAccountName: '$(acrName)'
                     backendAzureRmContainerName: '$(imageName)'
                     backendAzureRmKey: 'terraform.tfstate'
 
                 - task: TerraformTaskV1@0
-                  displayName: Terraform Apply
+                  displayName: 'Terraform Apply'
                   inputs:
                     provider: 'azurerm'
                     command: 'apply'
@@ -112,7 +109,7 @@ stages:
                     args: '-auto-approve -var "environment=$(Build.SourceBranchName)"'
 
                 - task: AzureWebAppContainer@1
-                  displayName: Deploy to Azure Web App
+                  displayName: 'Deploy to Azure Web App'
                   inputs:
                     azureSubscription: '$(azureSubscription)'
                     resourceGroupName: '$(rgName)'
