--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,18 @@ trigger:
 
 variables:
   imageName: azdevops-cicd-sample
-  azureSubscription: AzureSubscriptionConnection
+  azureSubscription: AzureSubscriptionConnection   # your ARM service-connection name
   acrName: nithinkatruacr
   rgName: ci-cd-rg
   sonarOrg: akhil-mano52020
 
 stages:
+
   - stage: Build
-    displayName: 'CI: Build, Test & Sonar'
+    displayName: CI: Build, Test & Sonar
     jobs:
       - job: Build
-        displayName: 'Self-Hosted Build'
+        displayName: Self‑Hosted Build
         pool:
           name: LocalSelfHostedPool1
           demands:
@@ -25,33 +26,43 @@ stages:
           - checkout: self
             persistCredentials: true
 
+          # 1) Authenticate to ACR via your ARM connection
+          - task: AzureCLI@2
+            displayName: Login to ACR
+            inputs:
+              azureSubscription: '$(azureSubscription)'
+              scriptType: ps
+              scriptLocation: inlineScript
+              inlineScript: |
+                az acr login --name $(acrName)
+
+          # 2) Standard Node steps
           - task: NodeTool@0
-            displayName: 'Use Node.js 14'
+            displayName: Use Node.js 14
             inputs:
               versionSpec: '14.x'
 
           - script: npm install
-            displayName: 'Install dependencies'
+            displayName: Install dependencies
 
           - script: npm run lint
-            displayName: 'Lint code'
+            displayName: Lint code
 
           - script: npm test
-            displayName: 'Run tests'
+            displayName: Run tests
 
-          - task: Docker@2
-            displayName: 'Build & Push to ACR'
-            inputs:
-              containerRegistry: 'nithinkatruacr-connection'
-              command: buildAndPush
-              repository: $(acrName).azurecr.io/$(imageName)
-              dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-              context: '$(Build.SourcesDirectory)'
-              tags: |
-                $(Build.BuildId)
+          # 3) Build & Push with plain Docker commands
+          - script: |
+              docker build -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) .
+            displayName: Build Docker image
 
+          - script: |
+              docker push $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
+            displayName: Push image to ACR
+
+          # 4) SonarCloud analysis (v3 tasks)
           - task: SonarCloudPrepare@3
-            displayName: 'Prepare SonarCloud analysis'
+            displayName: Prepare SonarCloud analysis
             inputs:
               SonarCloud: 'SonarCloud'
               organization: '$(sonarOrg)'
@@ -61,23 +72,23 @@ stages:
               cliProjectName: 'CI-CD Sample'
 
           - task: SonarCloudAnalyze@3
-            displayName: 'Run SonarCloud analysis'
+            displayName: Run SonarCloud analysis
 
           - task: SonarCloudPublish@3
-            displayName: 'Publish SonarCloud Quality Gate'
+            displayName: Publish SonarCloud Quality Gate
 
           - publish: $(Build.ArtifactStagingDirectory)
             artifact: drop
 
   - stage: Deploy
-    displayName: 'CD: Terraform + WebApp Deploy'
+    displayName: CD: Terraform + WebApp Deploy
     dependsOn: Build
     jobs:
       - deployment: Deploy
-        displayName: 'Terraform + WebApp Deploy'
+        displayName: Terraform + WebApp Deploy
         environment: '$(Build.SourceBranchName)'
         pool:
-          vmImage: 'ubuntu-latest'
+          vmImage: ubuntu-latest
         strategy:
           runOnce:
             deploy:
@@ -85,33 +96,33 @@ stages:
                 - checkout: self
 
                 - task: TerraformInstaller@0
-                  displayName: 'Install Terraform'
+                  displayName: Install Terraform
                   inputs:
                     terraformVersion: '1.0.0'
 
                 - task: TerraformTaskV1@0
-                  displayName: 'Terraform Init'
+                  displayName: Terraform Init
                   inputs:
-                    provider: 'azurerm'
-                    command: 'init'
-                    workingDirectory: 'terraform'
+                    provider: azurerm
+                    command: init
+                    workingDirectory: terraform
                     backendServiceArm: '$(azureSubscription)'
                     backendAzureRmResourceGroupName: '$(rgName)'
                     backendAzureRmStorageAccountName: '$(acrName)'
                     backendAzureRmContainerName: '$(imageName)'
-                    backendAzureRmKey: 'terraform.tfstate'
+                    backendAzureRmKey: terraform.tfstate
 
                 - task: TerraformTaskV1@0
-                  displayName: 'Terraform Apply'
+                  displayName: Terraform Apply
                   inputs:
-                    provider: 'azurerm'
-                    command: 'apply'
+                    provider: azurerm
+                    command: apply
                     environmentServiceName: '$(azureSubscription)'
-                    workingDirectory: 'terraform'
+                    workingDirectory: terraform
                     args: '-auto-approve -var "environment=$(Build.SourceBranchName)"'
 
                 - task: AzureWebAppContainer@1
-                  displayName: 'Deploy to Azure Web App'
+                  displayName: Deploy to Azure Web App
                   inputs:
                     azureSubscription: '$(azureSubscription)'
                     resourceGroupName: '$(rgName)'
