--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,13 +6,12 @@ trigger:
 
 variables:
   imageName: azdevops-cicd-sample
-  azureSubscription: AzureSubscriptionConnection   # your ARM service-connection name
+  azureSubscription: AzureSubscriptionConnection   # Your ARM service connection
   acrName: nithinkatruacr
   rgName: ci-cd-rg
   sonarOrg: akhil-mano52020
 
 stages:
-
   - stage: Build
     displayName: CI: Build, Test & Sonar
     jobs:
@@ -26,7 +25,7 @@ stages:
           - checkout: self
             persistCredentials: true
 
-          # 1) Authenticate to ACR via your ARM connection
+          # 1) Log in to ACR via Azure CLI (ARM connection)
           - task: AzureCLI@2
             displayName: Login to ACR
             inputs:
@@ -36,7 +35,7 @@ stages:
               inlineScript: |
                 az acr login --name $(acrName)
 
-          # 2) Standard Node steps
+          # 2) Node.js build & test
           - task: NodeTool@0
             displayName: Use Node.js 14
             inputs:
@@ -51,7 +50,7 @@ stages:
           - script: npm test
             displayName: Run tests
 
-          # 3) Build & Push with plain Docker commands
+          # 3) Docker build & push via scripts
           - script: |
               docker build -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) .
             displayName: Build Docker image
@@ -60,7 +59,7 @@ stages:
               docker push $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
             displayName: Push image to ACR
 
-          # 4) SonarCloud analysis (v3 tasks)
+          # 4) SonarCloud analysis
           - task: SonarCloudPrepare@3
             displayName: Prepare SonarCloud analysis
             inputs:
